Add applications and docker lookup.
