# db/schema.rb
@@ -10,7 +10,15 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_01_05_061931) do
+ActiveRecord::Schema[8.0].define(version: 2025_01_13_182033) do
+  create_table "applications", force: :cascade do |t|
+    t.string "name", null: false
+    t.json "hostnames", default: "[]", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["name"], name: "index_applications_on_name", unique: true
+  end
+
   create_table "groups", force: :cascade do |t|
     t.string "name"
     t.datetime "created_at", null: false
